--- a/src/App.css
+++ b/src/App.css
@@ -54,45 +54,6 @@ body {
   margin-top: 20px;
 }
 
-.navbar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-
-.navbar__text {
-  display: flex;
-  height: 60px;
-  align-items: center;
-  width: 1200px;
-  margin: 0 auto;
-}
-
-.logo {
-  width: 40%;
-  
-}
-.logo img {
-  width: 220px;
-  padding-top: 50px;
-}
-
-.navbar__ul {
-  width: 60%;
-  list-style-type: none;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.navbar__ul li a {
-  text-decoration: none;
-  color: white;
-  padding: 0 15px;
-  font-weight: 800;
-  text-transform: uppercase;
-}
-
 .banner__btn {
   margin-top: 35px;
 }
@@ -110,6 +71,125 @@ body {
 
 .btn-smart {
   background: rgba(255, 69, 79);
+}
+
+.NavbarItems {
+  background: none;
+  height: 20px;
+  padding-top: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+}
+
+.logo {}
+
+.fa-react {
+  margin-left: 0.5rem;
+  font-size: 1.6rem;
+}
+
+.nav-menu {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  grid-gap: 10px;
+  list-style: none;
+  text-align: center;
+  width: 70vw;
+  justify-content: end;
+  margin-right: 2rem;
+  text-decoration: none;
+}
+
+.nav-links {
+  color: white;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.nav-links:hover {
+  background-color: #e9e9e92a;
+  border-radius: 4px;
+  transition: all 0.2s ease-out;
+  text-decoration: none;
+  color: wheat;
+}
+
+.fa-bars {
+  color: #fff;
+}
+
+.nav-links-mobile {
+  display: none;
+}
+
+.menu-icon {
+  display: none;
+}
+
+@media screen and (max-width: 960px) {
+  .NavbarItems {
+      position: relative;
+      width: 100%;
+     
+  }
+
+  .nav-menu {
+    
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 500px;
+      position: absolute;
+      top: 80px;
+      right: -100%;
+      opacity: 1;
+      transition: all 0.5s ease;
+  }
+
+  .nav-menu.active {
+      background: #000000e3;
+      right: 0;
+      opacity: 1;
+      transition: all 0.5s ease;
+      z-index: 1;
+    
+
+     
+  }
+
+  .nav-links {
+      text-align: center;
+      padding: 2rem;
+      width: 100%;
+      display: table;
+  }
+
+  .nav-links:hover {
+      background-color: #b67073;
+      border-radius: 0;
+  }
+
+ 
+
+  .menu-icon {
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      transform: translate(-100%, 60%);
+      font-size: 1.8rem;
+      cursor: pointer;
+  }
+
+  .fa-times {
+      color: #fff;
+      font-size: 2rem;
+  }
+
+ 
 }
 
 .about {
@@ -673,7 +753,10 @@ z-index: 2; }
   display: block;
 }
 
+@media screen and (max-width: 960px) {
 
+
+}
 
 @media (max-width: 700px) {
   .navbar__text {
